tests/baselines/reference/functionAssignment(strict=true).errors.txt
functionAssignment.ts(15,1): error TS2454: Variable 'test' is used before being assigned.
functionAssignment.ts(22,5): error TS2322: Type 'number' is not assignable to type 'string'.
functionAssignment.ts(30,10): error TS7010: 'callb', which lacks return-type annotation, implicitly has an 'any' return type.
functionAssignment.ts(31,10): error TS7010: 'callb', which lacks return-type annotation, implicitly has an 'any' return type.
functionAssignment.ts(32,16): error TS7006: Parameter 'a' implicitly has an 'any' type.
functionAssignment.ts(34,17): error TS2339: Property 'length' does not exist on type 'number'.


==== functionAssignment.ts (6 errors) ====
    function f(n: Function) { }
    f(function () { });
    
    interface foo {
        get(handler: (bar: number)=>void): void;
    }
    
    interface baz {
        get(callback: Function): number;
    }
    
    var barbaz: baz;
    var test: foo;
    
    test.get(function (param) {
    ~~~~
!!! error TS2454: Variable 'test' is used before being assigned.
        var x = barbaz.get(function () { });
    });
    
    function f2(n: () => void) { }
    f2(() => {
        var n = '';
        n = 4;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    });
    
    function f3(a: { a: number; b: number; }) { }
    
    f3({ a: 0, b: 0 });
    
    
    function callb(lam:(l: number) => void );
             ~~~~~
!!! error TS7010: 'callb', which lacks return-type annotation, implicitly has an 'any' return type.
    function callb(lam:(n: string)=>void);
             ~~~~~
!!! error TS7010: 'callb', which lacks return-type annotation, implicitly has an 'any' return type.
    function callb(a) { }
                   ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    
    callb((a) =>{ a.length; });
                    ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'number'.
    
    
    